demo2/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo2-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - demo2.local.com
#    - '*'
#    - demo.local.com
#    - green.local.com
#    - blue.local.com
